objects/ErrorLog__c.object
<CustomObject>
    <fields>
        <fullName>Base_CRM_Id__c</fullName>
        <label>Base CRM Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_run_time__c</fullName>
        <label>Batch run time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFID__c</fullName>
        <label>SFID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ErrorLog</label>
    <nameField>
        <displayFormat>ERROR-{00000}</displayFormat>
        <label>ErrorLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>